--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ samp {
 pre {
   margin-top: 0;
   margin-bottom: 1rem;
-  overflow: auto;
+  overflow: hidden;
   -ms-overflow-style: scrollbar;
 }
 
@@ -300,7 +300,7 @@ input[type=checkbox] {
 }
 
 textarea {
-  overflow: auto;
+  overflow: hidden;
   resize: vertical;
 }
 
