--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
+  min-height: 200vh
   color: #212529;
   text-align: left;
   background-image: url("img/back.jpg");
