--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,10 @@ body {
   text-align: left;
   min-height:100%;
   background-image: url("img/back.jpg");
+  background-attachment: fixed;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
