--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ body {
   min-height:100%;
   background-image: url("img/back.jpg");
   background-attachment: fixed;
-  background-position: center bottom;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
