--- a/css/styles.css
+++ b/css/styles.css
@@ -67,9 +67,8 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  min-height:400%;
+  min-height:600vh;
   background-image: url("img/back.jpg");
-  backgroung-position:center bottom;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
