--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  min-height:600vh;
+  min-height:100%;
   background-image: url("img/back.jpg");
 }
 
