--- a/css/styles.css
+++ b/css/styles.css
@@ -492,8 +492,8 @@ mark,
   background-color: #fff;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
-  max-width: 100%;
-  height: auto;
+  max-width: 80%;
+  height: 70px;
 }
 
 .figure {
