--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,8 @@ body {
   text-align: left;
   min-height:200%;
   background-image: url("img/back.jpg");
-  background-attachment: scroll;
+  background-attachment: fixed;
+  background-position: center top;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
